# autology

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
docs/: AGENTIC_BUILD_RUNBOOK.md  AI_NATIVE.md  AI_NATIVE_AND_UI_PLAN.md  ANONYMIZATION.md  AUTONOMOUS_ROADMAP.md  CLOUDFLARE_PLAN.md  COMPETITIVE_BATTLECARD.md  CRITICALITY.md  DEMO_SCRIPT.md  DEVELOPMENT_PLAN.md  DEVIATIONS.md  GAP_ASSESSMENT_v2.1.md  IP_ARCHITECTURE.md  LLM_READINESS.md  MARKET_EDGE.md  PITCH_ONEPAGER.md  PORTABILITY.md  R0_FINDINGS.md  RESEARCH_ENGINE_SOTA.md  ROADMAP.md  STATE_AND_GAPS.md  STRATEGY_MEMO.md  SWAPIN_REPORT.md  UI_DESIGN.md  UX_VISION.md  WILD_CORPUS.md  mvp-plan-v2.md  whitepaper-v2.md
fixtures/aviation/: asrs_reports.csv  faa_acftref.csv  faa_master.csv  maintenance_erp.csv  ntsb_events.csv
fixtures/meridian/: README.md  bom_components.csv  leases.csv  products.csv  purchase_order_lines.csv  quality_notifications.csv  retail_pos_sales.csv  shipments.csv  site_headcount.csv  supplier_contracts.csv  support_tickets.csv
fixtures/wild/: ds_airport_codes.csv  ds_atp_world_tour_tennis_data_match_scores_1877_1967_unindexed.csv  ds_atp_world_tour_tennis_data_match_scores_1968_1990_unindexed.csv  ds_atp_world_tour_tennis_data_tournaments_1877_2017_unindexed.csv  ds_bond_yields_gov_long_term_us_10y.csv  ds_bond_yields_uk_10y_annual.csv  ds_bond_yields_uk_10y_quarterly.csv  ds_bond_yields_us_10y_monthly.csv  ds_breast_cancer.csv  ds_cash_surplus_deficit_cash_surp_def.csv  ds_cervical_cancer.csv  ds_cirp_survey_of_freshmen_freshmen_survey.csv  ds_cirp_survey_of_freshmen_institutions.csv  ds_co2_fossil_by_nation_fossil_fuel_co2_emissions_by_nation.csv  ds_co2_fossil_by_nation_top_emitters.csv  ds_co2_fossil_global_fuel_breakdown.csv  ds_co2_fossil_global_global.csv  ds_co2_ppm_co2_gr_mlo.csv  ds_co2_ppm_co2_mm_mlo.csv  ds_co2_ppm_daily.csv  ds_cofog.csv  ds_core_datasets_core_list.csv  ds_country_codes.csv  ds_covid_19_countries_aggregated.csv  ds_covid_19_key_countries_pivoted.csv  ds_covid_19_reference.csv  ds_cpi.csv  ds_cpi_gb_cpi_uk_annual.csv  ds_cpi_gb_cpi_uk_monthly.csv  ds_cpi_gb_inflation_uk.csv  ds_cpi_us_cpiai.csv  ds_crime_uk_forces.csv  ds_crunchcrawl_companydata.csv  ds_crunchcrawl_zips_by_amount.csv  ds_crunchcrawl_zips_by_numbers.csv  ds_currency_codes_codes_all.csv  ds_dac_and_crs_code_lists_dac_members.csv  ds_dac_and_crs_code_lists_non_dac_donors.csv  ds_datapackage_factory_openmv_aeration_rate.csv  (+343 more)
scripts/: build_aviation_fixtures.py  build_meridian_corpus.py  fetch_wild_corpus.py  swapin_eval.py
site/: README.md  demo.html  demo.js  index.html  pricing.html  style.css  trust.html
src/ontoforge/: cli.py
tests/: test_ip_boundary.py
tests/cdc/: cdc_helpers.py  (+4 more)
(+471 files in other folders)
