[project]
name = "ontoforge"
version = "0.1.0"
description = "OntoForge: an autonomous semantic data platform — induced ontologies, bitemporal entity store, provenance-grounded NL answers"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "duckdb>=1.1",
    "pyarrow>=17",
    "pandas>=2.2",
    "numpy>=1.26",
    "pydantic>=2.8",
    "sqlglot>=25",
    "scikit-learn>=1.5",
    "rdflib>=7",
    "pyshacl>=0.26",
    "xxhash>=3.4",
    "typer>=0.12",
    "rich>=13",
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
graph = ["pyoxigraph>=0.4"]

[project.scripts]
ontoforge = "ontoforge.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.6",
    "httpx>=0.27,<0.29",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ontoforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "slow: full-corpus end-to-end evaluations (swap-in competency suite)",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# contracts/__init__.py is a pure re-export hub; F401 is expected there.
"src/ontoforge/contracts/__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
